<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.iteso.caflores.tarea01.ActivityMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_main_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_main_nombre"
            android:imeOptions="actionDone"
            android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/activity_main_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_main_telefono"
            android:imeOptions="actionDone"
            android:inputType="phone|textAutoComplete|textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_escolaridad"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/activity_main_scholarship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/activity_main_sppiner_escolaridad"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_gen"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:id="@+id/activity_main_gendre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity_main_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="true"
                android:text="@string/activity_main_genero_fem"/>

            <RadioButton
                android:id="@+id/activity_main_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/activity_main_genero_mas"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_libro"
            android:textColor="@android:color/black"/>

        <AutoCompleteTextView
            android:id="@+id/activity_main_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textAutoComplete"
            android:maxLines="1"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/activity_main_athlete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/activity_main_prac_dep"/>

    </LinearLayout>

    <Button
        android:id="@+id/activity_main_clean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_limpiar"/>

</LinearLayout>